fixed bug with containers overlapping part of navbar

--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -15,7 +15,8 @@
     align-items: center;
     height: 90vh;
     position: relative;
-    z-index: 1; 
+    z-index: 1;
+    margin-top: 75px;
 
     overflow: hidden;
 }
@@ -136,7 +137,7 @@
 }
 
 /* Responsive adjustments */
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 450px) {
     .login-form {
         padding: 10px;
         margin: 0;
