--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -40,6 +40,7 @@
     justify-content: flex-end;
     align-items: center;
     margin-right: 20px;
+    z-index: 99;
 }
 
 .nav-button button {
