--- a/frontend/src/styles/Profile.css
+++ b/frontend/src/styles/Profile.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 70px;
+    margin-top: 75px;
     margin-bottom: 40px;
 }
 
